Able to orchestrate to list of topics according to an event

--- a/service-wallet/src/main/resources/application.properties
+++ b/service-wallet/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+#KAFKA BOOTSTRAP CONFIGURATION
+spring.kafka.bootstrap-servers=localhost:9092
+
+#KAFKA PRODUCER CONFIGURATION
+spring.kafka.producer.client-id=SERVICE_WALLET
+spring.kafka.producer.acks=all
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+spring.kafka.producer.linger-ms=1
+event.top-up.topics=EVENT_TOP_UP,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
