--- a/service-wallet/src/main/resources/application.properties
+++ b/service-wallet/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.linger-ms=1
-event.top-up.topics=EVENT_TOP_UP,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
+event.top-up.topics=EVENT_TOP_UP_REQUEST,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
