--- a/service-account/src/main/resources/application.properties
+++ b/service-account/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+server.port=8081
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/saga_pattern
+spring.datasource.username=18055848
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+#KAFKA BOOTSTRAP CONFIGURATION
+spring.kafka.bootstrap-servers=localhost:9092
+
+#KAFKA CONSUMER CONFIGURATION
+spring.kafka.consumer.group-id=SERVICE_ACCOUNT
+spring.kafka.consumer.client-id=SERVICE_ACCOUNT
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-offset-reset=earliest
+kafka.listener.auto-startup=true
+event.top-up.topic=EVENT_TOP_UP_REQUEST
+
+#KAFKA PRODUCER CONFIGURATION
+spring.kafka.producer.client-id=SERVICE_ACCOUNT
+spring.kafka.producer.acks=all
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+spring.kafka.producer.linger-ms=1
+event.transfer.topics=EVENT_TRANSFER_REQUEST
+event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
