Orchestrate success top up event

--- a/service-account/src/main/resources/application.properties
+++ b/service-account/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.linger-ms=1
 event.transfer.topics=EVENT_TRANSFER_REQUEST
 event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
+event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
