--- a/service-wallet/src/main/resources/application.properties
+++ b/service-wallet/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #KAFKA BOOTSTRAP CONFIGURATION
 spring.kafka.bootstrap-servers=localhost:9092
 
+#KAFKA CONSUMER CONFIGURATION
+spring.kafka.consumer.group-id=SERVICE_WALLET
+spring.kafka.consumer.client-id=SERVICE_WALLET
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-offset-reset=earliest
+kafka.listener.auto-startup=true
+event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
+event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
+
 #KAFKA PRODUCER CONFIGURATION
 spring.kafka.producer.client-id=SERVICE_WALLET
 spring.kafka.producer.acks=all
