--- a/service-wallet/pom.xml
+++ b/service-wallet/pom.xml
@@ -19,7 +19,11 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.8</version>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
