--- a/service-account/src/main/resources/application.properties
+++ b/service-account/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/saga_pattern
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_account
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
