--- a/service-dlq-platform/src/main/resources/application.properties
+++ b/service-dlq-platform/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dlq_platform
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_dlq_platform
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
