--- a/service-wallet/src/main/resources/application.properties
+++ b/service-wallet/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/saga_pattern
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_wallet
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
