--- a/service-dlq-platform/src/main/resources/application.properties
+++ b/service-dlq-platform/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_dlq_platform
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
@@ -8,15 +9,15 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.kafka.bootstrap-servers=localhost:9092
 
 #KAFKA CONSUMER CONFIGURATION
-spring.kafka.consumer.group-id=SERVICE_WALLET
-spring.kafka.consumer.client-id=SERVICE_WALLET
+spring.kafka.consumer.group-id=SERVICE_DLQ_PLATFORM
+spring.kafka.consumer.client-id=SERVICE_DLQ_PLATFORM
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
 event.top-up.dead-letter.topic=EVENT_TOP_UP_DEAD_LETTER
 
 #KAFKA PRODUCER CONFIGURATION
-spring.kafka.producer.client-id=SERVICE_WALLET
+spring.kafka.producer.client-id=SERVICE_DLQ_PLATFORM
 spring.kafka.producer.acks=all
 spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
