change dlq topic

--- a/service-dlq-platform/src/main/resources/application.properties
+++ b/service-dlq-platform/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.kafka.consumer.client-id=SERVICE_DLQ_PLATFORM
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
-event.top-up.dead-letter.topic=EVENT_TOP_UP_DEAD_LETTER
+dead-letter.topics=DEAD_LETTER_QUEUE
 
 #KAFKA PRODUCER CONFIGURATION
 spring.kafka.producer.client-id=SERVICE_DLQ_PLATFORM
