--- a/service-wallet/src/test/resources/application.properties
+++ b/service-wallet/src/test/resources/application.properties
@@ -3,4 +3,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
 event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
 event.top-up.topics=EVENT_TOP_UP_REQUEST,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
-event.top-up.dead-letter.topics=EVENT_TOP_UP_DEAD_LETTER
+dead-letter.topics=DEAD_LETTER_QUEUE
