[Tech Debt] Dead Letter Queue (#1)
* add vscode related into .gitignore

* fix formatting issue on IDE related

* able to dispose message to dead letter topics when failed to processing event

* add test for wallet controller

* reconfigure dead letter message to dlq platform

* able to store dead letter message from service layer

* able to consume dead letter message from dlq topic

* remove unused service and add git job for dlq platform

* change configuration for each service`s DB

* refactor dead letter listener which able to consume json message as string

* change dlq topic

* change reason from account not found only to be specific (include CIF information)

* downgrade dlq platform java versio into 8

* able to fetch dead letters data

* add saga orchestration service to dlq platform;

* able to re orchestrate to original topic

* throw dead letter not found when there is no dead letter with specified id

* implement delete dead letter on service layer

* able to delete dead letter and take action on dead letter queue

--- a/service-wallet/src/main/resources/application.properties
+++ b/service-wallet/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/saga_pattern
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_wallet
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -24,3 +24,4 @@ spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.linger-ms=1
 event.top-up.topics=EVENT_TOP_UP_REQUEST,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
+dead-letter.topics=DEAD_LETTER_QUEUE
