--- a/service-dlq-platform/src/main/resources/application.properties
+++ b/service-dlq-platform/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+server.error.include-message=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_dlq_platform
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
