--- a/.github/workflows/pre-push-job.yml
+++ b/.github/workflows/pre-push-job.yml
@@ -13,11 +13,17 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Library Kafka Producer Test
+      run: mvn -B test --file library-kafka-producer/pom.xml
+    - name: Build Kafka Producer Library
+      run: mvn -B package --file library-kafka-producer/pom.xml
+    - name: Build Kafka Consumer Library
+      run: mvn -B package --file library-kafka-consumer/pom.xml
+    - name: Build Common Model Library
+      run: mvn -B package --file library-common-model/pom.xml
     - name: Account Service Test
       run: mvn -B test --file service-account/pom.xml
     - name: Wallet Service Test
       run: mvn -B test --file service-wallet/pom.xml
     - name: Dead Letter Queue Platform Service Test
       run: mvn -B test --file service-dlq-platform/pom.xml
-    - name: Library Kafka Producer Test
-      run: mvn -B test --file library-kafka-producer/pom.xml
