--- a/.github/workflows/pre-push-job.yml
+++ b/.github/workflows/pre-push-job.yml
@@ -19,3 +19,5 @@ jobs:
       run: mvn -B test --file service-wallet/pom.xml
     - name: Dead Letter Queue Platform Service Test
       run: mvn -B test --file service-dlq-platform/pom.xml
+    - name: Account Search Service Test
+      run: mvn -B test --file service-account-search/pom.xml
