--- a/service-account-search/src/main/resources/application.properties
+++ b/service-account-search/src/main/resources/application.properties
@@ -1,28 +1,15 @@
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_account
-spring.datasource.username=18055848
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+server.port=8083
+spring.data.elasticsearch.cluster-name=personal-elasticsearch
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.repositories.enabled=true
 
 #KAFKA BOOTSTRAP CONFIGURATION
 spring.kafka.bootstrap-servers=localhost:9092
 
 #KAFKA CONSUMER CONFIGURATION
-spring.kafka.consumer.group-id=SERVICE_ACCOUNT
-spring.kafka.consumer.client-id=SERVICE_ACCOUNT
+spring.kafka.consumer.group-id=SERVICE_ACCOUNT_SEARCH
+spring.kafka.consumer.client-id=SERVICE_ACCOUNT_SEARCH
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
-event.top-up.topic=EVENT_TOP_UP_REQUEST
-
-#KAFKA PRODUCER CONFIGURATION
-spring.kafka.producer.client-id=SERVICE_ACCOUNT
-spring.kafka.producer.acks=all
-spring.kafka.producer.retries=0
-spring.kafka.producer.batch-size=16384
-spring.kafka.producer.buffer-memory=33554432
-spring.kafka.producer.linger-ms=1
-event.transfer.topics=EVENT_TRANSFER_REQUEST
-event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
-event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
+event.account-migration.topic=EVENT_ACCOUNT_MIGRATION
