--- a/service-account/src/main/resources/application.properties
+++ b/service-account/src/main/resources/application.properties
@@ -26,3 +26,4 @@ spring.kafka.producer.linger-ms=1
 event.transfer.topics=EVENT_TRANSFER_REQUEST
 event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
 event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
+event.account-updated.topics=EVENT_ACCOUNT_UPDATED
