--- a/service-account-search/src/main/resources/application.properties
+++ b/service-account-search/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.kafka.consumer.client-id=SERVICE_ACCOUNT_SEARCH
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
-event.account-migration.topic=EVENT_ACCOUNT_MIGRATION
+event.account-created.topic=EVENT_ACCOUNT_CREATED
+event.account-updated.topic=EVENT_ACCOUNT_UPDATED
