--- a/service-transaction/pom.xml
+++ b/service-transaction/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.personal</groupId>
-	<artifactId>service-wallet</artifactId>
+	<artifactId>service-transaction</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>service-wallet</name>
-	<description>Service Wallet</description>
+	<name>service-transaction</name>
+	<description>Service Transaction</description>
 
 	<properties>
 		<java.version>1.8</java.version>
