--- a/service-transaction/src/main/resources/application.properties
+++ b/service-transaction/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_wallet
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_transaction
 spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -8,8 +8,8 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.kafka.bootstrap-servers=localhost:9092
 
 #KAFKA CONSUMER CONFIGURATION
-spring.kafka.consumer.group-id=SERVICE_WALLET
-spring.kafka.consumer.client-id=SERVICE_WALLET
+spring.kafka.consumer.group-id=SERVICE_TRANSACTION
+spring.kafka.consumer.client-id=SERVICE_TRANSACTION
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
@@ -17,7 +17,7 @@ event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
 event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
 
 #KAFKA PRODUCER CONFIGURATION
-spring.kafka.producer.client-id=SERVICE_WALLET
+spring.kafka.producer.client-id=SERVICE_TRANSACTION
 spring.kafka.producer.acks=all
 spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
