--- a/.github/workflows/pre-push-job.yml
+++ b/.github/workflows/pre-push-job.yml
@@ -15,8 +15,8 @@ jobs:
         java-version: 1.8
     - name: Account Service Test
       run: mvn -B test --file service-account/pom.xml
-    - name: Wallet Service Test
-      run: mvn -B test --file service-wallet/pom.xml
+    - name: Transaction Service Test
+      run: mvn -B test --file service-transaction/pom.xml
     - name: Dead Letter Queue Platform Service Test
       run: mvn -B test --file service-dlq-platform/pom.xml
     - name: Account Search Service Test
