--- a/service-transaction/src/main/resources/application.properties
+++ b/service-transaction/src/main/resources/application.properties
@@ -24,4 +24,5 @@ spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.linger-ms=1
 event.top-up.topics=EVENT_TOP_UP_REQUEST,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
+event.transaction.topics=EVENT_TRANSACTION_REQUEST,SURROUNDING_NOTIFICATION,TRANSFER_NOTIFICATION
 dead-letter.topics=DEAD_LETTER_QUEUE
