--- a/service-account/src/main/resources/application.properties
+++ b/service-account/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.kafka.consumer.client-id=SERVICE_ACCOUNT
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
-event.top-up.topic=EVENT_TOP_UP_REQUEST
+event.transaction.topic=EVENT_TRANSACTION_REQUEST
 
 #KAFKA PRODUCER CONFIGURATION
 spring.kafka.producer.client-id=SERVICE_ACCOUNT
@@ -23,7 +23,6 @@ spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.linger-ms=1
-event.transfer.topics=EVENT_TRANSFER_REQUEST
-event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
-event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
+event.failed-transaction.topics=EVENT_FAILED_TRANSACTION_RESPONSE
+event.success-transaction.topics=EVENT_SUCCESS_TRANSACTION_RESPONSE
 event.account-updated.topics=EVENT_ACCOUNT_UPDATED
