--- a/service-transaction/src/main/resources/application.properties
+++ b/service-transaction/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.kafka.consumer.client-id=SERVICE_TRANSACTION
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-offset-reset=earliest
 kafka.listener.auto-startup=true
-event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
-event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
+event.success-transaction.topics=EVENT_SUCCESS_TRANSACTION_RESPONSE
+event.failed-transaction.topics=EVENT_FAILED_TRANSACTION_RESPONSE
 
 #KAFKA PRODUCER CONFIGURATION
 spring.kafka.producer.client-id=SERVICE_TRANSACTION
