--- a/service-transaction/src/test/resources/application.properties
+++ b/service-transaction/src/test/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 
-event.failed-top-up.topics=EVENT_FAILED_TOP_UP_RESPONSE
-event.success-top-up.topics=EVENT_SUCCESS_TOP_UP_RESPONSE
-event.top-up.topics=EVENT_TOP_UP_REQUEST,SURROUNDING_NOTIFICATION,TOP_UP_NOTIFICATION
+#KAFKA CONSUMER CONFIGURATION
+event.success-transaction.topics=EVENT_SUCCESS_TRANSACTION_RESPONSE
+event.failed-transaction.topics=EVENT_FAILED_TRANSACTION_RESPONSE
+
+#KAFKA PRODUCER CONFIGURATION
 event.transaction.topics=EVENT_TRANSACTION_REQUEST,SURROUNDING_NOTIFICATION,TRANSFER_NOTIFICATION
 dead-letter.topics=DEAD_LETTER_QUEUE
