--- a/service-dlq-platform/pom.xml
+++ b/service-dlq-platform/pom.xml
@@ -51,6 +51,11 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-52</artifactId>
+			<version>2.3.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
