--- a/service-dlq-platform/src/test/resources/application.properties
+++ b/service-dlq-platform/src/test/resources/application.properties
@@ -1,3 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:initialization.sql'
 
 dead-letter.topics=DEAD_LETTER_QUEUE
