--- a/service-authentication/src/main/resources/application.properties
+++ b/service-authentication/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=18055848
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# JWT SECRET
+authentication.app.jwt.secret=8859d480-0a3d-41c8-ab22-d11b7862272c
+authentication.app.jwt.expiration=3600
